[package]
name = "dbscan-rust"
version = "0.1.0"
authors = ["vn7n24fzkq <vn7n24fzkq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
